performance refinement